--- a/RecipeDatabase1/MainWindow.xaml
+++ b/RecipeDatabase1/MainWindow.xaml
@@ -26,7 +26,7 @@
 			<MenuItem Header="Программа">
 				<MenuItem Header="Выход" Click="CloseMenuItem_Click"/>
 				<Separator/>
-				<MenuItem Header="Обновить данные"/>
+				<MenuItem Header="Обновить данные" Click="UpdateMenuItem_Click"/>
 			</MenuItem>
 			<MenuItem Header="Рецепты">
 				<MenuItem Header="Добавить новый" Click="AddMenuItem_Click"/>
@@ -58,10 +58,16 @@
 						Grid.Row="1"
 						Grid.ColumnSpan="3"
 						ItemsSource="{Binding RecipesModelView}"
+						AutoGenerateColumns="False"
 					>
 						<DataGrid.DataContext>
 							<View:Recipe/>
 						</DataGrid.DataContext>
+						<DataGrid.Columns>
+							<DataGridTextColumn Header="Имя" Binding="{Binding Name}"/>
+							<DataGridTextColumn Header="Приготовление" Binding="{Binding Actions}"/>
+							<DataGridTextColumn Header="Ингредиенты" Binding="{Binding Ingredients}"/>
+						</DataGrid.Columns>
 					</DataGrid>
 					<!--ListView
 						Name="Recipes"
@@ -136,7 +142,7 @@
 
 
 					<TextBlock Text="Название:"/>
-					<TextBox x:Name="NameTextBox" Grid.Column="1" Grid.Row="0" Margin="5" />
+					<TextBox x:Name="RecipeNameTextBox" Grid.Column="1" Grid.Row="0" Margin="5" />
 
 					<TextBlock Text="Ингредиенты:" Grid.Row="1"/>
 					<TextBox x:Name="IngredientsTextBox" Grid.Column="1" Grid.Row="1" Margin="5" TextWrapping="Wrap" AcceptsReturn="True" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"/>
@@ -149,7 +155,7 @@
 						Content="Добавить"
 						Grid.ColumnSpan="2"
 						Grid.Row="3"
-						Margin="5"
+						Margin="5" Click="AddButton_Click"
 					/>
 				</Grid>
 			</TabItem>
