Удаление рецептов из базы данных

--- a/RecipeDatabase1/MainWindow.xaml
+++ b/RecipeDatabase1/MainWindow.xaml
@@ -65,6 +65,13 @@
 						<DataGrid.DataContext>
 							<View:Recipe/>
 						</DataGrid.DataContext>
+
+						<DataGrid.ContextMenu>
+							<ContextMenu>
+								<MenuItem Header="Удалить" Click="RecipeDataGridDeleteMenu_Click"/>
+							</ContextMenu>
+						</DataGrid.ContextMenu>
+
 						<DataGrid.Columns>
 							<DataGridTextColumn Header="Название" Binding="{Binding Name}"/>
 							<DataGridTextColumn Header="Приготовление" Binding="{Binding Actions}"/>
