--- a/RecipeDatabase1/MainWindow.xaml
+++ b/RecipeDatabase1/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="RecipeDatabase1.MainWindow"
+﻿<Window x:Class="RecipeDatabase.MainWindow"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-		xmlns:local="clr-namespace:RecipeDatabase1"
-		xmlns:View="clr-namespace:RecipeDatabase1.View"
+		xmlns:local="clr-namespace:RecipeDatabase"
+		xmlns:View="clr-namespace:RecipeDatabase.View"
 		mc:Ignorable="d"
 		Loaded="Window_Loaded"
 		Title="Книга рецептов"
