--- a/Recipe/App.xaml
+++ b/Recipe/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="RecipeDatabase.App"
+﻿<Application x:Class="Recipe.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:RecipeDatabase"
-             StartupUri="View/MainWindow.xaml">
+             xmlns:local="clr-namespace:Recipe"
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
